fixed contact page alignment

--- a/src/Styles/contact.css
+++ b/src/Styles/contact.css
@@ -46,7 +46,7 @@
   left: 10px; */
 }
 
-.contact span:nth-child(2) {
+.contact .single-line span:nth-child(2) {
   color: var(--trump);
   transform: rotate(45deg);
   position: relative;
@@ -81,19 +81,20 @@
 
 .contact .two-lines-first span:nth-child(1) {
   color: var(--sunflower);
-  /* padding-right: 20px; */
+  padding-right: 11px;
 }
 
 .contact .two-lines-first span:nth-child(2) {
   color: var(--trump);
   transform: rotate(45deg);
   position: relative;
-  bottom: 12px;
+  bottom: 8px;
   /* padding-right: 15px; */
 }
 
 .contact .two-lines-first span:nth-child(3) {
   color: var(--hungry-caterpillar);
+  padding-left: 10px;
 
 }
 
@@ -103,7 +104,8 @@
 
 .contact .two-lines-second span:nth-child(1) {
   color: var(--fire-engine);
-  padding-left: 5px;
+  padding: 0px;
+
 }
 
 .contact .two-lines-second span:nth-child(2) {
@@ -112,7 +114,7 @@
 
 .contact .two-lines-second span:nth-child(3) {
   color: var(--sunflower);
-  padding-left: 5px;
+  /* padding-left: 5px; */
 }
 
 
